--- a/Swift-Basic/11.속성과 메서드/속성과 메서드.md
+++ b/Swift-Basic/11.속성과 메서드/속성과 메서드.md
@@ -6,7 +6,7 @@
 
 > #### _어떤 특정한 메모리 공간을 가지고 그 안에 값을 저장할 수 있는 속성을 바로 저장 속성이라고 한다._
 
-| _구조체(struct)의 속성(Properties)_              | _클래스(Class)의 속성(Properties)_               |
+| _구조체(Struct)의 속성(Properties)_              | _클래스(Class)의 속성(Properties)_               |
 | ------------------------------------------------ | ------------------------------------------------ |
 | 저장 속성(Stored), 지연 저장 속성(Lazy)          | 저장 속성(Stored), 지연 저장 속성(Lazy)          |
 | 계산 속성(Computed) - 읽기/쓰기                  | 계산 속성(Computed) - 읽기/쓰기                  |
