--- a/Swift-Basic/6.반복문/반복문.md
+++ b/Swift-Basic/6.반복문/반복문.md
@@ -10,4 +10,192 @@
 
 ### 3. 반복
 
-- ### 반복문의 종류
+## 1) For문
+
+- for문의 기본 형태
+
+> #### 스위프트 스타일의 문법은 직관적이고 쉽게 작성이 가능하도록 되어있음
+
+```
+for item in 1...5   // 범위 {
+
+    /*
+
+     let item = 1,
+
+     let item = 2,
+
+     let item = 3,
+
+     let item = 4,
+
+     let item = 5
+
+     */
+
+
+    print("For문 출력해보기: \(item)")
+}
+```
+
+> #### _범위 or 컬렉션에서 item을 한개씩 뽑아, 중괄호 안에서 각 한번씩 순차적으로 반복 실행함을 의미_
+
+- ### 참고) 와일드 카드 패턴
+
+> #### 와일드 카드 패턴 \_ (언더바)은 스위프트에서 생략의 의미
+
+```
+
+for _ in 0...10 {
+
+    print("hello")
+}
+
+```
+
+## 2) For문 주의점
+
+- for문에서 선언하는 변수(상수)에 대한 정확한 이해
+
+#### for문의 임시 상수
+
+##### 1. for문이 진행되는 동안 사용이 되는 임시적인 상수(let)이다. (정확한 용어로 반복상수)
+
+##### 2. for문에서 선언하는 변수(상수)는 for문 내에서만 사용이 가능하다.
+
+```
+var name = "홍길동"
+
+for name in 1...5 {
+
+    /*
+
+     이 name은 범위랑 가장 가까이 있는,
+
+     가장 가까이에 선언된 반복 상수 name을 출력한다.
+
+     그래서 이 반복문에서는 이 for문 내에 있는 반복상수 name을 출력한다.
+
+     위에 선언된 변수 name이 아니라
+
+     */
+
+    print(name)
+}
+
+for n in 1...5 {
+
+    // name이 아닌 n이라고 다르게 선언함으로서 변수 name을 출력할 수 있다.
+
+    print(name)
+
+}
+
+// print(n)
+```
+
+#### 일반적인 변수 (범위 - 스코프)
+
+##### 1. for문 내부에서는 외부에 선언된 변수에는 접근이 가능하다.
+
+##### 2. for문 내부에서 새롭게 선언한 변수에는 외부에서 접근이 불가능하다.
+
+## 3) While문
+
+- While문의 기본 형태
+
+> #### 무한반복(루프)을 주의
+
+```
+var sum1 = 0
+
+var num = 1
+
+while num <= 50 {
+
+    // 조건이 만족하는 동안 계속 반복
+
+    sum1 += num
+
+    num += 1
+
+    // 1. sum = 0 + 1, num = 1 + 1, sum == 1
+
+    // 2. sum = 1 + 1, num = 2 + 1, sum == 3
+
+    // 3. sum = 3 + 3, num = 3 + 1, sum == 6
+
+    // 4. sum = 6 + 4, num = 4 + 1, sum == 10
+
+    // 5. sum = 10 + 5, num = 5 + 1, sum == 15
+
+    // 6. sum = 15 + 6, num = 6 + 1, sum == 16
+
+    // ...
+
+    // 이런 조건이 필요 (위의 조건식을 변화시키지 않으면 무한 반복하게됨)
+}
+
+print("총 합의 출력: \(sum1)")
+
+// 조건을 주의해서 짜야함
+```
+
+#### for문과 비교
+
+##### 1. 반복이 시작되기 전에, 반복 횟수가 정해져 있지 않을때 사용 (조건에 의해 반복)
+
+##### 2. 조건이 거짓이 될 때까지 일련의 명령문 수행(반드시 while문 내부에서 조건을 변화시키는 일이 일어나야함)
+
+# 제어전송문
+
+- 반복문에서 쓰이는 제어전송문(Control Transfer Statement)
+
+## 1) Continue
+
+- Continue의 사용
+
+> #### 반복의 지금 주기는 끝내고 다음 주기로 이어서 간다는 뜻
+
+```
+for num in 1...20 {
+
+    if num % 2 == 0 {
+
+        // num == 2의 배수
+
+        continue
+
+
+
+    }
+
+    // 1일 경우 if문이 거짓이므로 continue를 만나지 않고 바로 프린트문으로 넘어감
+
+    // 2일 경우 if문이 참이므로 continue를 만나면서 프린트문을 실행시키지 않고 다음 주기로 넘어감
+
+    // 따라서 2의 배수는 출력이 될 수 없고, 홀수들만 출력이 됨
+
+    print(num)
+}
+
+```
+
+## 2)Break
+
+- break의 사용
+
+> #### 반복문을 종료시킨다는 뜻
+
+```
+for num in 1...20 {
+
+    if num % 2 == 0 {
+
+        break
+
+    }
+
+    print(num)
+}
+```
