--- a/Swift-Basic/8.옵셔널/옵셔널.md
+++ b/Swift-Basic/8.옵셔널/옵셔널.md
@@ -160,3 +160,30 @@ let str: String = "Swift"
 
 var optionalStr: String? = nil
 ```
+
+---
+
+## 옵셔널 타입 사용하기
+
+- 옵셔널 타입: 값이 없을 수도 있는 경우를 포함하는(감싸고) 있는 임시적 타입
+
+```
+var optionalNumber: Int?
+
+// 간편 표기. 정식 표기 -> var num3: Optional<Int>
+
+var optionalString: String? = "안녕하세요."
+
+print(optionalNumber)
+
+print(optionalString)
+
+```
+
+---
+
+## 옵셔널 값을 추출하는 4가지 방법
+
+- ### 1. 강제로 값을 추출(Forced UnWrapping): 값이 있다는 것이 확실할 때 사용
+
+---
