--- a/Swift-Basic/9.컬렉션/컬렉션.md
+++ b/Swift-Basic/9.컬렉션/컬렉션.md
@@ -2,4 +2,205 @@
 
 ## 1) 배열(Array)
 
-- 데이터를 순서대로 저장하는 컬렉션 (자동으로 순번 지정됨)
+- ### 데이터를 순서대로 저장하는 컬렉션 (자동으로 순번 지정됨)
+
+> #### 컬렉션의 의미:데이터 바구니
+
+- ##### 배열의 문법 약속
+
+- ##### [] 대괄호로 묶는다. 배열의 인덱스의 시작은 0부터 (모든 프로그래밍 언어 공통 사항)
+
+- ##### (참고):번호가 0부터 매겨지는 이유는 간략하게 설명하면 메모리 공간을 가장 효율적으로 사용하는 방법이기 때문에 그렇다.
+
+- ##### 1개의 배열에는 동일한 타입의 데이터만 담을 수 있다.
+
+- ##### (순서가 있기 때문에) 값은 중복 가능
+
+```
+var numsArray = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+
+var stringArray = ["손흥민", "이강인", "횡인범", "김민재", "황희찬"]
+
+```
+
+---
+
+- ### 배열의 타입 표기
+
+---
+
+> 정식문법
+
+```
+let strArray1: Array<Int> = []
+```
+
+> 단축문법
+
+```
+let strArray2: [String] = []
+```
+
+---
+
+- ### 빈 배열의 생성
+
+---
+
+###### 빈 배열의 경우 타입을 지우면 컴파일러가 배열에 구체적으로 어떤 데이터를 담을 것인지를 알 수 없다. 따라서 빈 배열을 생성할 경우 타입을 반드시 선언해야 한다.
+
+```
+
+let emptyArray1: [Int] = []
+
+let emptyArray2 = Array<Int>()
+
+// let emptyArray2: Array<Int> or [Int] = Array<Int>()   타입 선언
+
+let emptyArray3 = [Int]()
+
+print(emptyArray3)
+
+```
+
+---
+
+- ### 배열의 기본 기능
+
+---
+
+```
+
+numsArray.count
+
+numsArray.isEmpty
+
+// !numsArray.isEmpty   // true
+
+
+numsArray.contains(1)  //파라미터로 값을 전달
+
+numsArray.contains(8)
+
+
+numsArray.randomElement()
+
+
+numsArray.swapAt(0, 1)
+
+
+
+
+```
+
+> ###### 결국 핵심은 배열은 데이터 바구니 라는 것. 그러니 숫자를 셀 수도 있고 비어 있는 여부를 확인할 수도 있어야 한다. 또 그 안에 어떤 데이터가 있는지, 무엇을 포함하는지를 확인하는 것이고 랜덤으로 데이터를 뽑을 수도, 데이터의 순서를 바꾸는 기능도 있는 것이다.
+
+---
+
+- ### 배열의 각 요소(element)에 대한 접근
+
+---
+
+> [] 서브스크립트 문법(대괄호를 이용한 특별한 함수)
+
+```
+
+numsArray = [1, 2, 3, 4, 5]
+
+stringArray = ["Apple", "Swift", "iOS", "Hello"]
+
+stringArray[0]
+
+stringArray[1]
+
+stringArray[2]
+
+stringArray[3]
+
+
+
+
+stringArray[1] = "Steve"
+
+print(stringArray)
+
+stringArray.first   // 리턴값 String?  ====> 빈 배열이라면 nil 리턴
+
+
+```
+
+- 일반적으로 first에 접근했을때 값이 없을수도 있는 경우가 있기 때문에 옵셔널 타입으로 주는 것이다.
+
+- 지금 실제로는 값이 존재하므로 강제추출연산자!를 사용하여 string.first!로 프린트 할 수 있다.
+
+```
+stringArray.last
+
+```
+
+> 배열의 시작 인덱스
+
+```
+stringArray.startIndex
+```
+
+- 시작하는 인덱스를 알려줌. 무조건 0이 나온다. 시작하는 인덱스는 언제나 0
+
+- startIndex가 0이기도 하지만 사실 메모리 주소를 의미한다.
+
+```
+stringArray.endIndex
+
+// stringArray.endIndex.advanced(by: -1)
+
+
+stringArray[stringArray.startIndex]
+
+stringArray[stringArray.endIndex - 1]
+```
+
+- endIndex는 배열로 저장되는 메모리 공간의 끝의 주소를 의미한다.
+
+- 따라서 배열의 범위를 벗어나지 않으려면 항상 마이너스 1을 해줘야 한다.
+
+```
+stringArray[stringArray.startIndex]
+
+stringArray[stringArray.endIndex - 1]
+
+// stringArray.index(<#T##i: Int##Int#>, offsetBy: <#T##Int#>)
+
+stringArray.firstIndex(of: "iOS")
+
+// 앞에서부터 찾았을때 "iOS"는 배열의 (앞에서부터) 몇번째
+
+stringArray.lastIndex(of: "iOS")
+
+// 뒤에서부터 찾았을때 "iOS"는 배열의 (앞에서부터) 몇번째
+```
+
+- 실제로 앱을 만들 경우 위와 같은 방식으로 데이터에 접근한다.
+
+- 실제 앱에서는 데이터의 종류와 접근 방식의 방정식이 복잡하기 때문.
+
+```
+
+if let index = stringArray.firstIndex(of: "iOS") {
+
+    print(index)
+
+    stringArray[index]
+
+}
+
+
+
+```
+
+if let 바인딩을 써야 하는 이유는 firstIndex의 타입을 옵셔널 형태로 알려주기 떄문
+
+옵셔널 형태로 알려주기 때문에 값이 있을 수도 있고 없을 수도 있다.
+
+Swift에서는 반환타입의 거의 대부분이 옵셔널 타입으로 선언되어 있다.
+
+값이 없을 수도 있기 때문에 에러를 방지하기 위하여 옵셔널 타입으로 선언한다.
